package com.bilibili.designpatterncomponent.command.metacommand;

public interface ICommand {
    void execute();
    void undo();
}
