package com.bilibili.designpatterncomponent.command.metacommand;

public class Light{
    public void on(){
        System.out.println("开灯");
    }
    public void off(){
        System.out.println("关灯");
    }
}
